--- a/style/style.css
+++ b/style/style.css
@@ -37,9 +37,9 @@ body {
 }
 
 button {
-  background-color: #ffb6c1;
+  background-color:white1;
   border: none;
-  color: white;
+  color: #D24545;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
