--- a/style/style.css
+++ b/style/style.css
@@ -37,7 +37,7 @@ body {
 }
 
 button {
-  background-color:white1;
+  background-color:white;
   border: none;
   color: #D24545;
   padding: 10px 20px;
@@ -53,6 +53,8 @@ button {
 
 button:hover {
   background-color: #ff6969;
+    background-color:white;
+
 }
 
 #messageContainer {
